030-software/fluxcd/apps/prowlarr/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr
spec:
  hostnames:
  - prowlarr.${domain}
  parentRefs:
  - name: cilium
    namespace: cilium
  rules:
  - backendRefs:
    - name: prowlarr
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
